# nu_plugin_from_bencode

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: from_bencode.rs  lib.rs  main.rs  nu.rs  read.rs
