[package]
name = "nu_plugin_from_bencode"
version = "0.6.0"
license = "MIT OR Apache-2.0"
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
description = "A Nushell plugin to convert bencode data into Nu structured values."
keywords = ["bittorrent", "torrent", "nu", "nushell", "bencode"]
categories = ["encoding"]
repository = "https://github.com/bluk/nu_plugin_from_bencode"
documentation = "https://docs.rs/nu_plugin_from_bencode/"
readme = "README.md"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
rust-version = "1.70.0"

[dependencies]
nu-plugin = "0.85.0"
nu-protocol = "0.85.0"
bt_bencode = { version = "0.7", default-features = false, features = ["alloc"] }
